<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    tools:context=".ui.access.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inicio_ic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:letterSpacing="0.3"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textScaleX="1"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="313dp"
        android:layout_height="375dp"
        android:layout_marginTop="210dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correo_Textlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/Correo"
            android:outlineProvider="background"
            android:textColorHint="@color/black"
            android:visibility="visible"
            app:boxStrokeColor="@color/black"
            app:endIconCheckable="false"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/divider_horizontal_textfield"
            app:errorTextColor="@color/Red"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contra_Textlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/divider_horizontal_bright"
            app:errorTextColor="@color/Red"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contra_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:hint="@string/Contraseña"

                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="5sp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:minHeight="48dp"
            android:text="@string/forgetpass"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/inicioses_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Inicio_sesion"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newuser_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Register_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/register"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>